syntax = "proto3";

package api.colonio.v1alpha;

option go_package = "github.com/llamerada-jp/colonio/api/colonio/v1alpha";

message RaftProposal {
  oneof content {
    RaftProposalManagement management = 1;
    RaftProposalStore store           = 2;
  }
}

message RaftProposalManagement {
}

message RaftProposalStore {
  enum Command {
    // buf:lint:ignore ENUM_ZERO_VALUE_SUFFIX
    COMMAND_IMPORT = 0;
    COMMAND_GET    = 1;
    COMMAND_SET    = 2;
    COMMAND_PATCH  = 3;
    COMMAND_DELETE = 4;
  }

  Command command    = 1;
  uint32 proposal_id = 2;
  string key         = 3;
  bytes value        = 4;
}

message RaftStoreSnapshot {
  RaftStoreRecords records = 1;
}

message RaftStoreRecords {
  map<string, bytes> records = 1;
}